# hh_parser

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
parse_hh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
parser/cmd/: resumes.json  run_parser.py
parser/model/: resume.py
parser/services/: parser.py  save_funct.py
