[metadata]
name = parse-hh
summary = Just HH parser
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.10


[entry_points]

console_scripts =
    hh_parse = parser.cmd.run_parse:main


[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    parse-hh

[egg_info]
tag_build = 0.1
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 0

[pbr]
autodoc_index_modules = 0
warnerrors = true
skip_changelog = true
skip_authors = true
skip_reno = true

[pycodestyle]
#E702 multiple statements on one line (semicolon)
#E731 do not assign a lambda expression, use a def
#W504 Line break occurred after a binary operator
ignore = E702,E731,W504
max-line-length = 99